--- a/Vib17/Views/Home/Index.cshtml
+++ b/Vib17/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            @Html.Partial("_popup", item)
+                            @await Html.PartialAsync("_popup", item)
                         </li>
                     }
                 </ul>
