--- a/Vib17/Views/Home/Contact.cshtml
+++ b/Vib17/Views/Home/Contact.cshtml
@@ -4,8 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 
 <p>
-    <a href="mailto:carrieredag.vib@gmail.com">carrieredag.vib@gmail.com</a><br />
-    Sanne Ter Dorsthorst: <a href="tel:0612324380">06-12324380</a><br />
+    <a href="mailto:carrieredag@vereniginginbeweging.com">carrieredag@vereniginginbeweging.com</a><br />
+    Marriëlle Ebskamp: <a href="tel:0651390796">06-51390796</a><br />
     Duncan Vermeer: <a href="tel:0683970203">06-83970203</a>
 </p>
 <p>
