--- a/Vib17/Views/Home/_popup.cshtml
+++ b/Vib17/Views/Home/_popup.cshtml
@@ -13,8 +13,8 @@
     <h3>@Model.Title</h3>
 
     <div class="info">
-        <div class="info-location">@Model.Location</div>
-        <div class="info-time">Tijd: @Model.TimeSlot.Title</div>
+        <div class="info-location">Location: @Model.Location</div>
+        <div class="info-time">Time: @Model.TimeSlot.Title</div>
         <div class="info-speaker">@Model.Speaker</div>
     </div>
 
