--- a/Vib17/Views/Home/_popup.cshtml
+++ b/Vib17/Views/Home/_popup.cshtml
@@ -19,7 +19,7 @@
     </div>
 
     <div class="description" style="white-space:pre-line">
-        @Model.Description
+        @Html.Raw(Model.Description)
     </div>
 
     <div class="modal-footer">
