--- a/Vib17/Views/Shared/_Layout.cshtml
+++ b/Vib17/Views/Shared/_Layout.cshtml
@@ -15,8 +15,16 @@
 
     <title>VIB Carrièredag 2018</title>
     <link rel="stylesheet" href="~/css/style.min.css" />
+    <style>
+        .main-container{
+             max-width: 500px;
+    margin: auto;
+        }
+    </style>
 </head>
 <body>
+    <div class="main-container">
+
     <nav>
         <a mark-active-route asp-area="" asp-controller="Home" asp-action="Index">
             @* Een calendar *@
@@ -66,6 +74,7 @@
     <div class="container body-content">
         @RenderBody()
 
+    </div>
     </div>
     
     <script defer src="~/js/site.es5.min.js" asp-append-version="true"></script>
