--- a/Vib17/Views/Home/Index.cshtml
+++ b/Vib17/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-    <h2>Programma Carrièredag</h2>
+    <h2>Program Career day Human Movement sciences 7 november</h2>
 
     <ul>
         @foreach (var slot in Model.Select(x => x.TimeSlot).Distinct())
