--- a/Vib17/Views/Home/Index.cshtml
+++ b/Vib17/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                                 @item.Title 
                             
                                 <span class="full-message">
-                                    Vol
+                                    Full
                                 </span>
 
                                 <span class="group">
