--- a/Vib17/Views/Home/Index.cshtml
+++ b/Vib17/Views/Home/Index.cshtml
@@ -66,9 +66,9 @@ else
         Hope to see you on the 7th of November! 
     </p>
     <p>
-        Kinds regards,
-        Career day Committee
-        Contact us if you got any questions
+        Kinds regards,</br></br>
+        Career day Committee</br>
+        Contact us if you got any questions</br>
              
     </p>
 
