--- a/Vib17/Views/Home/Contact.cshtml
+++ b/Vib17/Views/Home/Contact.cshtml
@@ -5,6 +5,7 @@
 
 <p>
     <a href="mailto:carrieredag@vereniginginbeweging.com">carrieredag@vereniginginbeweging.com</a><br />
+    <a href="mailto:carrieredag.vib@gmail.com">carrieredag.vib@gmail.com</a><br />
     Marriëlle Ebskamp: <a href="tel:0651390796">06-51390796</a><br />
     Duncan Vermeer: <a href="tel:0683970203">06-83970203</a>
 </p>
@@ -14,7 +15,7 @@
 </p>
 <p>
     <b>Studentenraad FGB</b><br />
-    Medische Faculteit G-616<br />
+    Medische Faculteit D-65<br />
     Van der Boechorststraat 7-9<br />
     1081 BT Amsterdam
 </p>
